--- a/ASSETS/css/style.css
+++ b/ASSETS/css/style.css
@@ -177,8 +177,6 @@
     grid-column: 2/3;
 }
 
-
-
 /* Second grid */
 .grid_gap2 {
     grid-gap: 19px;
@@ -242,7 +240,8 @@
 
 
 .hover_img:hover {
-    transform: scale(1.05)
+    transform: scale(1.05);
+    filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
 }
 
 .transition {
@@ -258,7 +257,7 @@
 
 .design_animation:hover {
     animation-name: disign;
-    animation-duration: .5s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     cursor: pointer;
 
@@ -274,10 +273,6 @@
 
     20% {
         rotate: 5deg;
-    }
-
-    40% {
-        rotate: 0deg;
     }
 
     60% {
